--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router": "^7.8.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
